[tool.poetry]
name = "experiment_app"
version = "0.1.0"
description = ""
authors = ["nscheuma <neelan@squareup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
statsmodels = "^0.13.5"
pydantic = "^1.10.7"
streamlit = "^1.35.0"
plotly = "^5.23"
sq-py-sample-size = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artifactory.global.square/artifactory/api/pypi/block-pypi/simple"
priority = "default"